[project]
name = "tssample"
version = "0.1.0"
description = ""
authors = [
    {name = "swx-sai",email = "124345558+hiromitsu-sai@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "boto3 (>=1.37.24,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
